--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "betterScripts": {
+    "dev": {
+      "command": "nodemon ./process/server.ts",
+      "env": {
+        "NODE_PATH": ".",
+        "NODE_ENV": "development"
+      }
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --config nodemon.json src/index.ts"
+    "dev": "better-npm-run dev"
   },
   "repository": {
     "type": "git",
@@ -19,11 +28,15 @@
   "homepage": "https://github.com/Vinamr-KhaiHoan/furniture-master#readme",
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/method-override": "0.0.31",
     "@types/nodemon": "^1.19.0",
+    "@types/pg": "^7.14.11",
     "@types/sequelize": "^4.28.9",
     "ajv": "^8.2.0",
     "better-npm-run": "^0.1.1",
+    "body-parser": "^1.19.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "inversify": "^5.1.1",
     "inversify-binding-decorators": "^4.0.0",
@@ -39,6 +52,9 @@
     "tslint": "^6.1.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/config": "0.0.38",
+    "@types/cors": "^2.8.10",
     "sequelize-cli": "^6.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
