--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "homepage": "https://github.com/Vinamr-KhaiHoan/furniture-master#readme",
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/method-override": "0.0.31",
     "@types/nodemon": "^1.19.0",
     "@types/pg": "^7.14.11",
+    "@types/request": "^2.48.5",
     "@types/sequelize": "^4.28.9",
     "ajv": "^8.2.0",
     "better-npm-run": "^0.1.1",
@@ -42,6 +44,7 @@
     "inversify-binding-decorators": "^4.0.0",
     "inversify-express-utils": "^6.3.2",
     "inversify-logger-middleware": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.7",
